about-world.html を更新

--- a/about-world.html
+++ b/about-world.html
@@ -1,1 +1,43 @@
+<main class="l-main l-main--narrow about-page">
 
+  <section class="about-intro">
+    <p>
+      <a href="about.html" class="char-back-link">← ABOUTトップに戻る</a>
+    </p>
+    <h1>World</h1>
+    <p>
+      作品全体の「世界観」についてまとめたページです。<br>
+      完全な設定資料ではなく、「読者がなんとなく空気をつかめる」程度の情報量を想定しています。
+    </p>
+  </section>
+
+  <!-- 世界の雰囲気 -->
+  <section class="section-card about-section">
+    <h2 class="section-card__title">世界の雰囲気</h2>
+    <p>
+      現代なのか、近未来なのか、異世界なのかといったざっくりした時代背景や、<br>
+      「どこか少しだけ非現実が混じっている世界」など、トーンを説明するスペースです。
+    </p>
+  </section>
+
+  <!-- シリーズごとの位置づけ -->
+  <section class="section-card about-section" style="margin-top: 16px;">
+    <h2 class="section-card__title">シリーズごとの位置づけ</h2>
+    <p>
+      0_Occupation / 1_Instinct など、それぞれのシリーズがこの世界の中でどういう役割を持つのかを、
+      一覧的に整理しておく想定です。<br>
+      「そまりものがたり」はプロローグ寄り、「Instinct」は内面掘り下げ寄り…など。
+    </p>
+  </section>
+
+  <!-- ルール・制約 -->
+  <section class="section-card about-section" style="margin-top: 16px;">
+    <h2 class="section-card__title">この世界のルール</h2>
+    <p>
+      色・アーク・コードといった要素が「世界の中でどう扱われているか」の前提を書いておくと、<br>
+      後から設定を増やすときの基準になります。（細かい用語の説明自体は Terms に回すイメージ）
+    </p>
+  </section>
+
+  <a href="about.html" class="char-back-btn bottom">ABOUTトップに戻る</a>
+</main>
