--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
     <li>
       <div class="about-card"> 
         <a href="about-project.html">
-          <div class="card-title">Project / ぎじえプロジェクトとは</div>
-          <div class="card-desc">
+          <div class="about-card-title">Project / ぎじえプロジェクトとは</div>
+          <div class="about-card-desc">
             シリーズ全体のコンセプト、軸になっている「色×キャラクター」の考え方、
             今後の展開イメージなどをまとめたページです。
           </div>
@@ -60,8 +60,8 @@
     <li>
       <div class="about-card">
         <a href="about-world.html">
-          <div class="card-title">World / どんな世界観なの？</div>
-          <div class="card-desc">
+          <div class="about-card-title">World / どんな世界観なの？</div>
+          <div class="about-card-desc">
             舞台となる世界の雰囲気やルール、シリーズごとの位置づけなどを紹介します。
           </div>
         </a>
@@ -73,8 +73,8 @@
     <li>
       <div class="about-card">
         <a href="about-creator.html">
-          <div class="card-title">Creator / 制作者について</div>
-          <div class="card-desc">
+          <div class="about-card-title">Creator / 制作者について</div>
+          <div class="about-card-desc">
             制作者のプロフィールや創作の考え方について記載します。
           </div>
         </a>
