--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@
   <div class="about-terms-block">
     <div class="about-card">
       <a href="about-terms.html">
-        <div class="card-title">Terms / 用語説明</div>
-        <div class="card-desc">
+        <div class="about-card-title">Terms / 用語説明</div>
+        <div class="about-card-desc">
           コード・アーク・シリーズなど、本作の用語を一覧で解説します。
         </div>
       </a>
