--- a/about-project.html
+++ b/about-project.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="css/style.css?v=4">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- ★ head-icons.html を読み込む共通スクリプト -->
+  <script src="js/loadHeadIcons.js"></script>
 </head>
 
 <body class="about-page about-project-page">
