about-world.html を更新

--- a/about-world.html
+++ b/about-world.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <link rel="icon" type="image/png" href="images/ui/logo-circle.png">
   <!-- ★ head-icons.html を読み込む共通スクリプト -->
   <script src="js/loadHeadIcons.js"></script>
 </head>
