--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
   <meta charset="utf-8">
   <title>ぎじえプロジェクト</title>
 
+  <!-- ▼ OGP 基本設定 -->
+  <meta property="og:site_name" content="ぎじえプロジェクト / Project LURE">
+  <meta property="og:title" content="ぎじえプロジェクト">
+  <meta property="og:description" content="色から生まれた物語『ぎじえプロジェクト』の公式サイトです。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://project-lure.github.io/Aquarium/index.html">
+  <meta property="og:image" content="https://project-lure.github.io/Aquarium/images/ui/logo-horizontal.png">
+
+  <!-- ▼ Twitterカード -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ぎじえプロジェクト">
+  <meta name="twitter:description" content="色から生まれた物語『ぎじえプロジェクト』の公式サイトです。">
+  <meta name="twitter:image" content="https://project-lure.github.io/Aquarium/images/ui/logo-horizontal.png">
+  
   <!-- スマホ対応 -->
   <meta name="viewport"
         content="width=device-width, initial-scale=1, viewport-fit=cover">
