about-terms.html を更新

--- a/about-terms.html
+++ b/about-terms.html
@@ -18,7 +18,12 @@
 
   <!-- ヘッダー -->
   <div id="header-container"></div>
-
+  
+  <div class="bubbles bubbles-body">
+    <span></span><span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span>
+  </div>
+  
   <main class="l-main l-main--narrow about-page">
 
     <!-- 戻るリンク -->
