--- a/character.html
+++ b/character.html
@@ -26,7 +26,7 @@
   </main>
 
   <!-- 泡エフェクト（キャラページ専用） -->
-  <div class="bubbles">
+  <div class="bubbles bubbles-body">
     <span></span><span></span><span></span><span></span><span></span>
     <span></span><span></span><span></span><span></span>
   </div>
