about-creator.html を更新

--- a/about-creator.html
+++ b/about-creator.html
@@ -30,56 +30,91 @@
     <a href="about.html" class="char-back-link">&laquo; ABOUT に戻る</a>
 
     <!-- 見出しブロック -->
-    <section class="about-intro">
-      <h1>Creator / 制作者について</h1>
-      <p>
-        ここでは、Project LURE を制作している人間について簡単にまとめます。<br>
-        個人情報を細かく出す場ではなく、「こういうスタンスで作っています」という
-        創作プロフィールを置いておくイメージです。
-      </p>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">PERSONAL THEME</h2>
+  <p>
+    私が使っている「LURE / ルアー」という名前は、擬似餌（ルアー）に由来しています。<br>
+    本物ではなくても、色や形を自由に変えながら、水の中で魅力として機能する存在。<br>
+    その「変幻自在でいられること」への憧れが、活動名の根本にあります。
+  </p>
+  <p>
+    英語の <em>lure</em> が「惹きつける」という意味を持つように、<br>
+    決まった姿に固まらず、表現そのものを通して人を魅了できたらという思いも込めています。
+  </p>
+  <p>
+    また、漢字表記の「瑠曖（るあ）」には、<br>
+    光を帯びていながら、輪郭が曖昧でつかみきれない存在でいたいという願いがあります。<br>
+    明確な形に縛られず、曖昧さの中に自由があるという考え方です。
+  </p>
+  <p>
+    本物の魚のように泳ぐ必要はなく、<br>
+    “本物ではないからこそできる表現” を活かして誰かを惹きつける。<br>
+    その姿勢が Project LURE の基盤となっています。
+  </p>
+</section>
 
     <!-- プロフィール -->
-    <section class="section-card about-section">
-      <h2 class="section-card__title">PROFILE</h2>
-      <p>
-        ・名前（活動名）：<br>
-        ・主な活動分野：イラスト / 作曲 / 小説・テキスト / ロゴ・作字 など<br>
-        ・好きなモチーフ：色、職業、言葉遊び、ちょっとひねくれたキャラクター　など
-      </p>
-      <p>
-        ここには、外向けに公開しても良い範囲で、<br>
-        「どんなことをしている人か」「何を作るのが得意か」を簡潔に書いておきます。
-      </p>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">PERSONAL THEME</h2>
+  <p>
+    私が使っている「LURE / ルアー」という名前は、擬似餌（ルアー）に由来しています。<br>
+    本物ではなくても、色や形を自由に変えながら、水の中で魅力を発揮する存在。<br>
+    その「変幻自在でいられること」への憧れが、活動名の根底にあります。
+  </p>
+  <p>
+    同時に、英語の <em>lure</em>（惹きつける）という意味も重ねています。<br>
+    決まった姿に固定されず、表現そのものを通して人を魅了したいという願いを込めています。
+  </p>
+  <p>
+    漢字表記の「瑠曖（るあ）」には、<br>
+    光を帯びていながら輪郭が曖昧で、どこまでも形を変えられる存在でいたいという意味があります。<br>
+    明確さよりも、揺らぎや曖昧さの中に自由を見つけたいという考え方です。
+  </p>
+  <p>
+    本物の魚のように泳ぐ必要はなく、<br>
+    “本物ではないからこそ届くもの” を表現に変えて誰かを惹きつけたい。<br>
+    そうした姿勢が Project LURE 全体の根にあります。
+  </p>
+</section>
 
-    <!-- 創作スタンス -->
-    <section class="section-card about-section">
-      <h2 class="section-card__title">CREATIVE STANCE</h2>
-      <p>
-        Project LURE では、すべてを一気に完璧に仕上げるのではなく、<br>
-        <strong>「キャラクターを軸に、要素ごとに少しずつ育てていく」</strong> ことを大切にしています。
-      </p>
-      <p>
-        たとえば、あるキャラクターについて、<br>
-        まずは立ち絵、次にキャラソンの仮歌、あとから設定資料や短いテキスト……というように、<br>
-        断片を積み上げながら、時間をかけて「好きな世界」を形にしていく方針です。
-      </p>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">PROFILE</h2>
+  <p>
+        ・名前（活動名）：LURE / 瑠曖（るあ）<br>
+        ・主な活動分野：キャラクターデザイン / 作曲（キャラソン） / テキスト / ロゴ・作字<br>
+        ・好きなモチーフ：色、職業、言葉、矛盾や葛藤のあるキャラクター
+  </p>
+  <p>
+        色を起点にしたキャラクターの造形と、<br>
+        その心情を音として翻訳する「キャラソン制作」を主軸に活動しています。
+  </p>
+</section>
 
-    <!-- このプロジェクトに込めていること -->
-    <section class="section-card about-section">
-      <h2 class="section-card__title">PERSONAL THEME</h2>
-      <p>
-        Project LURE は、創作活動そのものと、自分自身の感情や価値観を、<br>
-        少し距離をおいて眺め直すための「装置」のような位置づけでもあります。
-      </p>
-      <p>
-        色やキャラクターというフィルターを通すことで、<br>
-        直接言葉にするにはむずかしい気持ちや、うまく整理できない経験を、<br>
-        物語やビジュアルとして安全に外側に出すことを目指しています。
-      </p>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">CREATIVE STANCE</h2>
+  <p>
+    Project LURE では、ひとつのキャラクターを一度に完成させるのではなく、<br>
+    <strong>「ビジュアル・言葉・音」を少しずつ積み重ねて育てる</strong> という方法をとっています。
+  </p>
+  <p>
+    立ち絵、短いテキスト、曲の仮歌……。<br>
+    断片を順に積み上げることで、そのキャラクターの価値観や生き方が立ち上がっていきます。<br>
+    完成品を一気に提示するのではなく、“育つ過程そのもの”を大事にしています。
+  </p>
+</section>
+
+<section class="section-card about-section">
+  <h2 class="section-card__title">PERSONAL THEME</h2>
+  <p>
+    私にとって Project LURE は、創作のための場所であると同時に、<br>
+    自分自身の感情や不安、葛藤を安全に外へ出すための装置のような存在でもあります。
+  </p>
+  <p>
+    色やキャラクターというフィルターを通すことで、<br>
+    直接言葉にしづらい気持ちを物語や音に変換し、整理することができます。<br>
+    その断片が、誰かの悩みや孤独と響き合う“ささやかな救い”になれば嬉しいと思っています。
+  </p>
+</section>
 
   </main>
 
