about-terms.html を更新

--- a/about-terms.html
+++ b/about-terms.html
@@ -27,7 +27,7 @@
   <main class="l-main l-main--narrow about-page">
 
     <!-- 戻るリンク -->
-    <a href="about.html" class="char-back-link">&laquo; ABOUT に戻る</a>
+    <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
 
     <!-- 見出しブロック -->
     <section class="about-intro">
