about-terms.html を更新

--- a/about-terms.html
+++ b/about-terms.html
@@ -42,8 +42,8 @@
       <h2 class="section-card__title">ARC / アーク</h2>
       <p>
         アーク（Arc）は、キャラクターの内面や役割を象徴する<strong>属性</strong>です。<br>
-        そのキャラがどんな方向の「物語」を持っているかを整理するための分類として使います。
-        
+        そのキャラがどんな方向の「物語」を持っているかを整理するための分類として使います。<br>
+        記載してあるキーワードはアークが示す性格の一例です。
       </p>
 
       <!-- ここに arcList.json から生成したカードを流し込む -->
@@ -60,7 +60,7 @@
       <h2 class="section-card__title">SERIES / シリーズと総称</h2>
       <p>
         キャラクターたちは10個のシリーズに分類されます。<br>
-        
+        テーマの種類によって属するシリーズがかわります。
       </p>
 
       <!-- ここに series.json から生成したカードを流し込む -->
