about-creator.html を更新

--- a/about-creator.html
+++ b/about-creator.html
@@ -30,15 +30,13 @@
     <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
     <!-- 見出しブロック -->
 <section class="about-intro">
-  <h1>CREATOR / クリエイターについて</h1>
+  <h1>CREATOR / 制作者について</h1>
   <p>
 Lure / 擬似餌 🎣 として活動しています。<br>
-    Project LURE は、色から生まれたキャラクターたちの世界を通して、<br>
-    日々の悩みや揺らぎにそっと寄り添える作品を作りたいという思いから始まりました。
+    Project LURE は、色から生まれたキャラクターたちの世界を通して、日々の悩みや揺らぎにそっと寄り添える作品を作りたいという思いから始まりました。
   </p>
   <p>
-    このページでは、「どんな姿勢で創作しているのか」を<br>
-    外向けにわかりやすくまとめています。
+    このページでは、「どんな姿勢で創作しているのか」をまとめています。
   </p>
 </section>
 
@@ -47,61 +45,56 @@ Lure / 擬似餌 🎣 として活動しています。<br>
   <h2 class="section-card__title">PERSONAL THEME</h2>
   <p>
     私が使っている「LURE / 擬似餌🎣」という名前は、擬似餌（ルアー）に由来しています。<br>
-    本物ではなくても、色や形を自由に変えながら、水の中で魅力として機能する存在。<br>
-    その「変幻自在でいられること」への憧れが、活動名の根本にあります。
+    本物ではなくても、色や形を自由に変えながら、水の中で魅力として機能する存在。その「変幻自在でいられること」への憧れが、活動名の根本にあります。
   </p>
   <p>
-    英語の <em>lure</em> が「惹きつける」という意味を持つように、<br>
-    決まった姿に固まらず、表現そのものを通して人を魅了できたらという思いも込めています。
+    英語の <em>lure</em> が「惹きつける」という意味を持つように、決まった姿に固まらず、表現そのものを通して人を魅了できたらという思いも込めています。
   </p>
   <p>
-    また、漢字表記の「瑠曖（るあ）」には、<br>
-    光を帯びていながら、輪郭が曖昧でつかみきれない存在でいたいという願いがあります。<br>
+    また、漢字表記の「瑠曖（るあ）」には、光を帯びていながら、輪郭が曖昧でつかみきれない存在でいたいという願いがあります。<br>
     明確な形に縛られず、曖昧さの中に自由があるという考え方です。
   </p>
   <p>
     本物の魚のように泳ぐ必要はなく、<br>
     “本物ではないからこそできる表現” を活かして誰かを惹きつける。<br>
-    その姿勢が Project LURE の基盤となっています。
+    その姿勢が ぎじえプロジェクト の基盤となっています。
   </p>
 </section>
 
 <section class="section-card about-section">
   <h2 class="section-card__title">PROFILE</h2>
   <p>
-        ・名前（活動名）：LURE / 瑠曖（るあ）<br>
-        ・主な活動分野：キャラクターデザイン / 作曲（キャラソン） / テキスト / ロゴ・作字<br>
-        ・好きなモチーフ：色、職業、言葉、矛盾や葛藤のあるキャラクター
+        ・名前：Lure / 擬似餌 🎣<br>
+        ・主な活動分野：キャラクターデザイン / 作曲 / ロゴ・作字<br>
+        ・好きな言葉：コンセプト
   </p>
   <p>
-        色を起点にしたキャラクターの造形と、<br>
-        その心情を音として翻訳する「キャラソン制作」を主軸に活動しています。
+        色をモチーフにしたキャラクターデザインと、彼らの心情を伝えられるキャラソンを主軸に活動しています。
   </p>
 </section>
 
 <section class="section-card about-section">
   <h2 class="section-card__title">CREATIVE STANCE</h2>
   <p>
-    Project LURE では、ひとつのキャラクターを一度に完成させるのではなく、<br>
-    <strong>「ビジュアル・言葉・音」を少しずつ積み重ねて育てる</strong> という方法をとっています。
+    ぎじえプロジェクト では、ひとつのキャラクターを表現するために様々なメディアを使用しています。<br>
+    <strong>イラスト・テキスト(小説・詩)・音楽</strong>を通して、世界を多面的に見せたいと考えています。
   </p>
   <p>
-    立ち絵、短いテキスト、曲の仮歌……。<br>
-    断片を順に積み上げることで、そのキャラクターの価値観や生き方が立ち上がっていきます。<br>
-    完成品を一気に提示するのではなく、“育つ過程そのもの”を大事にしています。
+    私はどの分野も初心者で、現在も勉強しながら制作を積み重ねています。<br>
+    ですがどのメディアでも、見た人の心を揺さぶれるようなものをつくりたいという信念があります。
   </p>
 </section>
 
 <section class="section-card about-section">
   <h2 class="section-card__title">PERSONAL THEME</h2>
   <p>
-    私にとって Project LURE は、創作のための場所であると同時に、<br>
+    私にとって ぎじえプロジェクト は、創作のための場所であると同時に、<br>
     自分自身の感情や不安、葛藤を安全に外へ出すための装置のような存在でもあります。
   </p>
   <p>
-    色やキャラクターというフィルターを通すことで、<br>
-    直接言葉にしづらい気持ちを物語や音に変換し、整理することができます。<br>
-    その断片が、誰かの悩みや孤独と響き合う“ささやかな救い”になれば嬉しいと思っています。
+    イラストや音楽というフィルターを通すことで、<br>
+    直接言葉にしづらい気持ちを変換し、整理することができます。<br>
+    誰かの悩みや孤独と響き合う“ささやかな救い”になれば嬉しいと思っています。
   </p>
 </section>
 <nav class="about-nav">
