--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
           </ul>
 
           <p class="help-note">
-            一覧では「タイトル」と「イラスト」を中心に眺め、
-            気になるキャラクターをクリックすると詳細ページが開きます。
+            キャラクターをクリックすると詳細ページが開きます。
           </p>
         </section>
 
@@ -108,8 +107,8 @@
         <section class="help-section">
           <h3>Coming Soon について</h3>
           <p>
-            まだイラストが未公開のキャラクターは、<br>
-            「Coming Soon」と書かれたプレースホルダカードで表示されます。
+            イラストが未公開のキャラクターは、<br>
+            「Coming Soon」と書かれたカードで表示されます。
           </p>
           <p class="help-note">
             クリックしても詳細ページには移動しません。<br>
