about-creator.html を更新

--- a/about-creator.html
+++ b/about-creator.html
@@ -42,7 +42,7 @@ Lure / 擬似餌 🎣 として活動しています。<br>
 
     <!-- 見出しブロック -->
 <section class="section-card about-section">
-  <h2 class="section-card__title">PERSONAL THEME</h2>
+  <h2 class="section-card__title">ORIGIN</h2>
   <p>
     私が使っている「LURE / 擬似餌🎣」という名前は、擬似餌（ルアー）に由来しています。<br>
     本物ではなくても、色や形を自由に変えながら、水の中で魅力として機能する存在。その「変幻自在でいられること」への憧れが、活動名の根本にあります。
