about-project.html を更新

--- a/about-project.html
+++ b/about-project.html
@@ -51,6 +51,9 @@
   <p>
     キャラクターの心情や価値観は、<strong>キャラソンという“声”の形</strong>で表現されます。<br>
     それぞれの曲は、そのキャラがどんな気持ちで世界を見ているのかを示します。
+    
+    キャラソンは歌い手の心情や信念、価値観などが組み込まれており、曲を聴くだけで人生を感じ取ることができます。<br>
+    そこで、私も想像したキャラクターの歌を通して、皆さんに彼女たちの人生を知ってほしいと考えています。
   </p>
 </section>
 
