--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <h1>ABOUT</h1>
       <p>
         「ぎじえプロジェクト / Project LURE」の全体像を案内するページです。<br>
-        プロジェクトの成り立ちや世界観、制作者のこと、そして作中で使われる用語を、
+        プロジェクトの成り立ちや世界観、制作者のことを、
         3つの章に分けてまとめています。
       </p>
       <p>
