about-world.html を更新

--- a/about-world.html
+++ b/about-world.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>ABOUT | World / 世界観</title>
+  <title>ABOUT | 世界観について</title>
   <meta name="viewport"
         content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="stylesheet" href="css/style.css?v=4">
@@ -30,76 +30,74 @@
     <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
 
     <!-- 見出しブロック -->
-    <section class="about-intro">
-      <h1>World / どんな世界観なのか</h1>
-      <p>
-        ここでは、Project LURE の「世界観」について簡単にまとめています。<br>
-        厳密な設定資料集というよりは、各キャラクターがどんな空気の中で生きているのかを
-        ざっくり掴んでもらうためのページです。
-      </p>
-      <p>
-        基本方針として、<strong>ひとつの大きな物語や年表があるわけではなく</strong>、<br>
-        作品ごとに独立した短編として読める構造になっています。
-      </p>
-    </section>
+<section class="about-intro">
+  <h1>World / どんな世界観なのか</h1>
+  <p>
+    ここでは、「ぎじえプロジェクト」の世界観の考え方をまとめています。<br>
+    厳密な設定資料集というより、キャラクターたちがどんな空気の中で生き、
+    どんな“世界の見え方”を持っているのかを掴んでもらうためのページです。
+  </p>
+  <p>
+    基本方針として、<strong>ひとつの大きな物語や年表は存在しません。</strong><br>
+    作品ごとに世界観は独立しており、キャラごとの価値観や人生観が“その作品の世界”を形づくる構造になっています。
+  </p>
+</section>
 
-    <!-- 世界観のトーン -->
-    <section class="section-card about-section">
-      <h2 class="section-card__title">TONE &amp; MOOD</h2>
-      <p>
-        全体のトーンは、<strong>現実寄りの日常に、すこしだけ不思議さが混ざった世界</strong>です。<br>
-        いわゆる「なんでもできるファンタジー」ではなく、リアリティのある葛藤が存在する世界を目指しています。
-      </p>
-      <p>
-        舞台となる時代や場所は、<strong>作品ごとにばらばら</strong>です。<br>
-        現代のオフィス街、名前のない街、未来都市、<br>
-        ひとつひとつの短編ごとに「その作品専用の舞台」が用意されているイメージです。
-      </p>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">TONE &amp; MOOD</h2>
+  <p>
+    全体のトーンは、<strong>現実に近い日常の中に、少しだけ不思議さが滲む世界</strong>です。<br>
+    なんでもできる魔法的なファンタジーではなく、
+    キャラクターの葛藤や価値観がリアルに響くような現実寄りの雰囲気を大切にしています。
+  </p>
+  <p>
+    舞台となる時代や場所は、<strong>作品ごとに異なります。</strong><br>
+    現代の街、名前のない都市、少し未来の環境など、
+    それぞれのキャラクターの“生き方”に合った舞台が設定されます。
+  </p>
+</section>
 
-    <!-- シリーズ間の関係 -->
-    <section class="section-card about-section">
-      <h2 class="section-card__title">RELATION BETWEEN SERIES</h2>
-      <p>
-        Project LURE にはいくつかのシリーズがありますが、<br>
-        それらは<strong>世界線や時間軸を縛るものではなく、「どんな種類のテーマか」を示すラベル</strong>として使っています。
-      </p>
-      <ul>
-        <li>0_Occupation …… 職業・役割・立場にまつわる物語</li>
-        <li>1_Instinct …… 感情・欲望・心の動きにまつわる物語</li>
-        <li>2_Zone …… 遊び・ゲーム・勝負ごとにまつわる物語</li>
-        <li>…など</li>
-      </ul>
-      <p>
-        各シリーズのキャラクター同士に、公式な関係性や時系列のつながりはありません。<br>
-        例外として、<strong>0_Occupation / そまりものがたり</strong> では、<br>
-        「同じ人物が、職業や環境だけ違う別ルートの人生を歩んだらどうなるか」をテーマにした短編が並びます。<br>
-        それでも一話一話は独立しており、どこから読んでも理解できる構成です。
-      <div class="info-card">
-        全シリーズについては、<br>
-        <a href="about-terms.html">Terms / 用語説明</a> に掲載しています。
-      </div>
-      </p>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">RELATION BETWEEN SERIES</h2>
+  <p>
+    ぎじえプロジェクトには複数のシリーズがありますが、<br>
+    それらは<strong>世界線や時系列を縛るものではなく、「どんなテーマを扱う作品なのか」を示す分類ラベル</strong>として機能しています。
+  </p>
+  <ul>
+    <li>0_Occupation …… 職業・役割・立場をテーマにした作品</li>
+    <li>1_Instinct …… 感情・欲望・心の動きをテーマにした作品</li>
+    <li>2_Zone …… 遊び・競技・勝負に関するテーマの作品</li>
+    <li>…など</li>
+  </ul>
+  <p>
+    各シリーズ間には、公式な関係性や共通の時系列はありません。<br>
+    例外として <strong>0_Occupation / そまりものがたり</strong> は、<br>
+    「同じ人物が、別の職業・別の選択をしたらどんな生き方になるか」という視点で作品が並びますが、<br>
+    それでも各作品は独立しており、どこから読んでも理解できる構成です。
+  </p>
+  <div class="info-card">
+    全シリーズの詳細は、<br>
+    <a href="about-terms.html">Terms / 用語説明</a> にまとめています。
+  </div>
+</section>
 
-    <!-- メタ要素（ルアーやアーク） -->
-    <section class="section-card about-section">
-      <h2 class="section-card__title">META ELEMENTS</h2>
-      <p>
-        Project LURE 全体には、共通して登場するいくつかの「記号」があります。<br>
-        代表的なものが <strong>アーク（Arc）</strong>です。
-      </p>
-      <p>
-        アークは、キャラクターの性質や傾向をざっくり分類するためのマークです。<br>
-        表面的な性格を表す<strong>エクスアーク（ExArc）</strong>と、
-        内面的性格を表す<strong>コアアーク（CoreArc）</strong>があります。<br>
-        どんな組み合わせがどんな人間を表現するのか、考えてみるのも楽しいかもしれません。
-      </p>
-      <div class="info-card">
-        アークの種類については、<br>
-        <a href="about-terms.html">Terms / 用語説明</a> に掲載しています。
-      </div>
-    </section>
+<section class="section-card about-section">
+  <h2 class="section-card__title">META ELEMENTS</h2>
+  <p>
+    ぎじえプロジェクトには、いくつか共通して登場する「記号」があります。<br>
+    代表的なものが <strong>アーク（Arc）</strong> です。
+  </p>
+  <p>
+    アークはキャラクターの性質や内面の方向性を示すための指標です。<br>
+    表に現れやすい傾向を示す<strong>エクスアーク（ExArc）</strong>と、  
+    そのキャラの核となる価値観を示す<strong>コアアーク（CoreArc）</strong>があります。<br>
+    キャラをより深く理解するための補助線として使われています。
+  </p>
+  <div class="info-card">
+    アークの種類については、<br>
+    <a href="about-terms.html">Terms / 用語説明</a> にまとめています。
+  </div>
+</section>
 <nav class="about-nav">
   <a href="about-project.html"
      class="char-back-btn about-nav-btn about-nav-btn--prev">
