about-terms.html を更新

--- a/about-terms.html
+++ b/about-terms.html
@@ -69,6 +69,35 @@
       </div>
     </section>
 
+    <!-- キャラクター構造（メインカラー・テーマ・コード・タイトル） -->
+    <section class="section-card about-section">
+      <h2 class="section-card__title">CHARACTER STRUCTURE / キャラクターの構造</h2>
+
+      <p>
+        ぎじえプロジェクトのキャラクターは、<br>
+        <strong>メインカラー・テーマ・コード・タイトル</strong>の4つの要素で構成されています。<br>
+        一般的な“固有名”ではなく、<strong>作品タイトルそのものがキャラの呼称</strong>として扱われます。
+      </p>
+
+      <ul>
+        <li><strong>メインカラー：</strong>そのキャラクターの世界の見え方・価値観を象徴する色</li>
+        <li><strong>テーマ：</strong>職業・感情・季節など、物語の軸となる概念</li>
+        <li><strong>コード：</strong>キャラクターを識別するための番号（000〜）。制作順・分類補助</li>
+        <li><strong>タイトル：</strong>作品そのものの名前であり、キャラの“呼び名”として機能する要素</li>
+      </ul>
+
+      <p>
+        この形式は、「名前を覚える必要があるキャラクター」ではなく、<br>
+        <strong>色とテーマから生まれた“ひとつの人生”を作品として提示する</strong>ために採用されています。
+      </p>
+
+      <p>
+        読者は、キャラクターを記号的に覚える必要はなく、<br>
+        <strong>色・タイトル・世界観</strong>から直感的に捉えられるようデザインされています。<br>
+        それぞれのキャラが“誰なのか”よりも、“どう生きてきたのか”に注目していただく構造です。
+      </p>
+    </section>
+    
   </main>
 
   <!-- フッター -->
