--- a/about-project.html
+++ b/about-project.html
@@ -124,10 +124,11 @@
     </section>
 
     <nav class="about-nav">
-      <a href="about-world.html" class="char-back-btn about-nav-btn about-nav-btn--next">
-        WORLD >>
-      </a>
+      <a href="about-world.html" class="char-back-btn about-nav-btn about-nav-btn--next">WORLD &raquo;</a>
     </nav>
+    
+    <!-- 戻るリンク -->
+    <a href="about.html" class="char-back-btn">&laquo; ABOUT に戻る</a>
   </main>
 
   <!-- フッター -->
